# ctxmenu

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
src/: backup.rs  main.rs  registry.rs
